# Scissor

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  contributing.md  dev_guide.md  expansion.md  features.md  file_structure.md  item_model.md  maintenance.md  map_system.md  optimization_plan.md  plugin_api.md  pvp_mechanics.md  roadmap.md  world_control.md  world_manager.md
paper-server/: build.gradle.kts
paper-server/src/main/java/com/destroystokyo/paper/: PaperVersionFetcher.java
paper-server/src/main/java/com/destroystokyo/paper/profile/: CraftPlayerProfile.java
paper-server/src/main/java/io/papermc/paper/: ServerBuildInfoImpl.java
paper-server/src/main/java/io/papermc/paper/plugin/entrypoint/strategy/modern/: LoadOrderTree.java
paper-server/src/main/java/io/papermc/paper/plugin/storage/: SimpleProviderStorage.java
paper-server/src/main/java/org/bukkit/craftbukkit/: Main.java
paper-server/src/main/java/org/spigotmc/: WatchdogThread.java
src/: main.rs  schematic.rs  server.rs  world.rs
src/core/: admin.rs  block.rs  block_event.rs  chat.rs  command.rs  config.rs  inventory.rs  item_model.rs  logger.rs  mapfile.rs  mod.rs  network.rs  permissions.rs  player_manager.rs  plugin_api.rs  save_manager.rs  world_manager.rs
