[package]
name = "scissor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Custom Minecraft server shell with schematic loading, static maps, and plugin-ready API."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
parking_lot = "0.12"
async-std = { version = "1.12", features = ["attributes"] }
bytes = "1.5"
toml = "0.8"
anyhow = "1.0"
ahash = { version = "0.8", features = ["serde"] }
chrono = "0.4"
